--- a/app/views/weapons/index.html.haml
+++ b/app/views/weapons/index.html.haml
@@ -3,6 +3,16 @@
 %table
   %thead
     %tr
+      %th Name
+      %th Types
+      %th Heat
+      %th Damage
+      %th Min Range
+      %th Shrt Range
+      %th Med Range
+      %th Long Range
+      %th Ammo/Ton
+      %th To Hit
       %th
       %th
       %th
@@ -10,6 +20,16 @@
   %tbody
     - @weapons.each do |weapon|
       %tr
+        %td= weapon.name
+        %td= weapon.types
+        %td= weapon.heat
+        %td= weapon.damage
+        %td= weapon.minrange
+        %td= weapon.shrtrange
+        %td= weapon.medrange
+        %td= weapon.longrange
+        %td= weapon.ammoperton
+        %td= weapon.tohitmod
         %td= link_to 'Show', weapon
         %td= link_to 'Edit', edit_weapon_path(weapon)
         %td= link_to 'Destroy', weapon, method: :delete, data: { confirm: 'Are you sure?' }
