--- a/app/views/components/_form.html.haml
+++ b/app/views/components/_form.html.haml
@@ -1,9 +1,9 @@
-= form_for @weapon do |f|
-  - if @weapon.errors.any?
+= form_for @component do |f|
+  - if @component.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@weapon.errors.count, "error")} prohibited this weapon from being saved:"
+      %h2= "#{pluralize(@component.errors.count, "error")} prohibited this component from being saved:"
       %ul
-        - @weapon.errors.full_messages.each do |message|
+        - @component.errors.full_messages.each do |message|
           %li= message
 
   .field
